Quick pass of a prototype Widget extension

--- a/MedTracker.xcodeproj/xcshareddata/xcschemes/AppIntents.xcscheme
+++ b/MedTracker.xcodeproj/xcshareddata/xcschemes/AppIntents.xcscheme
@@ -47,6 +47,7 @@
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
+      intentQueryString = "Log allegra"
       selectedDebuggerIdentifier = ""
       selectedLauncherIdentifier = "Xcode.IDEFoundation.Launcher.PosixSpawn"
       launchStyle = "0"
@@ -69,6 +70,7 @@
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
+      intentQueryString = "Log allegra"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
