Moved core data files into a new swift package

--- a/MedTracker.xcodeproj/xcshareddata/xcschemes/AppIntents.xcscheme
+++ b/MedTracker.xcodeproj/xcshareddata/xcschemes/AppIntents.xcscheme
@@ -47,7 +47,7 @@
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
-      intentQueryString = "Log allegra"
+      intentQueryString = "Log medication"
       selectedDebuggerIdentifier = ""
       selectedLauncherIdentifier = "Xcode.IDEFoundation.Launcher.PosixSpawn"
       launchStyle = "0"
@@ -58,6 +58,17 @@
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES"
       launchAutomaticallySubstyle = "2">
+      <RemoteRunnable
+         runnableDebuggingMode = "2"
+         BundleIdentifier = "com.apple.notificationcenterui">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "5316751F275C202500CE3753"
+            BuildableName = "AppIntents.appex"
+            BlueprintName = "AppIntents"
+            ReferencedContainer = "container:MedTracker.xcodeproj">
+         </BuildableReference>
+      </RemoteRunnable>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
@@ -70,7 +81,7 @@
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
-      intentQueryString = "Log allegra"
+      intentQueryString = "Log medication"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
