--- a/MedTracker.xcodeproj/xcshareddata/xcschemes/AppWidgetsExtension.xcscheme
+++ b/MedTracker.xcodeproj/xcshareddata/xcschemes/AppWidgetsExtension.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1310"
+   LastUpgradeVersion = "1320"
    wasCreatedForAppExtension = "YES"
    version = "2.0">
    <BuildAction
@@ -15,9 +15,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "53167529275C202500CE3753"
-               BuildableName = "AppIntentsUI.appex"
-               BlueprintName = "AppIntentsUI"
+               BlueprintIdentifier = "53A35FB52778C7C400D12C8C"
+               BuildableName = "AppWidgetsExtension.appex"
+               BlueprintName = "AppWidgetsExtension"
                ReferencedContainer = "container:MedTracker.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -67,6 +67,23 @@
             ReferencedContainer = "container:MedTracker.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "_XCWidgetKind"
+            value = ""
+            isEnabled = "NO">
+         </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "_XCWidgetDefaultView"
+            value = "timeline"
+            isEnabled = "NO">
+         </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "_XCWidgetFamily"
+            value = "medium"
+            isEnabled = "NO">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
